docs: update for aichallenge red theme (#2)
Signed-off-by: Yu Asabe <yu.asabe@tier4.jp>
Co-authored-by: Yu Asabe <yu.asabe@tier4.jp>

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -10,7 +10,7 @@ theme:
     - toc.integrate
   palette:
     scheme: slate
-    primary: black
+    primary: custom
     accent: red
   # logo:
   # favicon:
@@ -34,6 +34,9 @@ nav:
       - specifications/simulator.md
   - FAQ: faq.md
   - Community: community.md
+
+extra_css:
+  - stylesheets/custom.css
 
 plugins:
   - search:
