--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,11 @@ repos:
       - id: markdownlint
         args: [-c, .markdownlint.yaml, --fix]
 
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.6
+    hooks:
+      - id: prettier
+
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.30.0
     hooks:
