docs: update template part to 2024 version
Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,5 +1,5 @@
-site_name: AI Challenge Template
-site_url: https://automotiveaichallenge.github.io/aichallenge-documentation/
+site_name: AI Challenge 2024
+site_url: https://automotiveaichallenge.github.io/aichallenge-documentation-2024/
 docs_dir: docs
 copyright: "&copy; 2024 TIER IV, Inc."
 theme:
