--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -26,6 +26,11 @@ nav:
       - course/index.md
       - course/vehicle.md
       - course/sensing.md
+      - course/localization.md
+      - course/control.md
+      - course/rviz.md
+      - course/planning.md
+      - course/perception.md
   - specifications:
       - specifications/interface.md
       - specifications/hardware.md
