--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -33,9 +33,9 @@ nav:
       - specifications/hardware.md
       - specifications/simulator.md
   - development:
-      - development/architecture.md
       - development/requirements.md
       - development/installation.md
+      - development/workspace.md
       - development/main-module.md
       - development/device-drivers.md
   - FAQ: faq.md
