docs(tutorial,installation,workspace): update docs

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -35,6 +35,7 @@ nav:
       - development/requirements.md
       - development/installation.md
       - development/workspace.md
+      - development/visible-simulation.md
       - development/main-module.md
       - development/device-drivers.md
   - FAQ: faq.md
