--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -32,7 +32,7 @@ nav:
       - specifications/hardware.md
       - specifications/simulator.md
   - development:
-      - development/requirements.md
+      #- development/requirements.md
       - development/installation.md
       - development/workspace.md
       - development/visible-simulation.md
