--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -17,6 +17,7 @@ theme:
 
 nav:
   - index: index.md
+  - getting-started.md
   - information.md
   - competition:
       - competition/rules.md
@@ -40,7 +41,6 @@ nav:
       - development/device-drivers.md
   - FAQ: faq.md
   - Community: community.md
-  - tutorial.md
 
 extra_css:
   - stylesheets/custom.css
