--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -17,6 +17,7 @@ theme:
 
 nav:
   - index: index.md
+  - getting-started.md
   - information.md
   - competition:
       - competition/rules.md
@@ -32,7 +33,6 @@ nav:
       - specifications/hardware.md
       - specifications/simulator.md
   - development:
-      #- development/requirements.md
       - development/installation.md
       - development/workspace.md
       - development/visible-simulation.md
@@ -40,7 +40,6 @@ nav:
       - development/device-drivers.md
   - FAQ: faq.md
   - Community: community.md
-  - tutorial.md
 
 extra_css:
   - stylesheets/custom.css
