ci: add pre-commit
Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,9 @@ repos:
     rev: v1.30.0
     hooks:
       - id: yamllint
+
+  # - repo: https://github.com/tcort/markdown-link-check
+  #  rev: v3.12.2
+  #  hooks:
+  #    - id: markdown-link-check
+  #      args: [--quiet, --config=.markdown-link-check.json]
