--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.33.0
@@ -26,7 +27,7 @@ repos:
       - id: yamllint
 
   # - repo: https://github.com/tcort/markdown-link-check
-  #  rev: v3.12.2
-  #  hooks:
-  #    - id: markdown-link-check
-  #      args: [--quiet, --config=.markdown-link-check.json]
+  #   rev: v3.12.2
+  #   hooks:
+  #     - id: markdown-link-check
+  #       args: [--quiet, --config=.markdown-link-check.json]
