feat: move pages
Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,8 @@ repos:
     hooks:
       - id: yamllint
 
-  # - repo: https://github.com/tcort/markdown-link-check
-  #   rev: v3.12.2
-  #   hooks:
-  #     - id: markdown-link-check
-  #       args: [--quiet, --config=.markdown-link-check.json]
+  - repo: https://github.com/tcort/markdown-link-check
+    rev: v3.12.2
+    hooks:
+      - id: markdown-link-check
+        args: [--quiet, --config=.markdown-link-check.json]
