--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -7,10 +7,12 @@ use_directory_urls: false
 
 theme:
   name: material
+  custom_dir: overrides
   features:
     - navigation.tabs
     - navigation.tabs.sticky
     - toc.integrate
+    - announce.dismiss
   palette:
     scheme: slate
     primary: custom
