docs: submission.ja.md file paths to use relative paths (#45)
* docs: add instructions for uploading package to online environment

* feat: add instructions for uploading package to online environment

* docs: update online environment URL to correct link

* docs: update online environment URL to correct link

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: taikitanaka3 <65527974+taikitanaka3@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: Takagi, Isamu <43976882+isamu-takagi@users.noreply.github.com>

* Update docs/submission.ja.md

Co-authored-by: Takagi, Isamu <43976882+isamu-takagi@users.noreply.github.com>

* Update submission.ja.md file paths to use relative paths

* Update submission.ja.md file paths to use relative paths

* Update submission.ja.md file paths to use relative paths

* Update docs/rule.ja.md

* Update docs/rule.ja.md

* Update docs/rule.ja.md

* Update docs/rule.ja.md

* Update docs/rule.ja.md

* Update docs/rule.ja.md

* Update docs/rule.ja.md

* move pages

Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

* fix layout

Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

* fix result-summary

Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

---------

Signed-off-by: Takagi, I

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -26,7 +26,9 @@ nav:
   - information:
       - information/schedule.md
       - information/rules.md
-  - submission.md
+  - preliminaries:
+      - preliminaries/submission.md
+      - preliminaries/check-results.md
   - setup:
       - setup/requirements.md
       - setup/workspace-setup.md
@@ -66,6 +68,7 @@ plugins:
           nav_translations:
             index: トップページ
             information: 大会情報
+            preliminaries: 予選
             setup: 導入
             development: 開発
             specifications: 仕様
@@ -76,6 +79,7 @@ plugins:
           nav_translations:
             index: Top Page
             information: Information
+            preliminaries: Preliminaries
             setup: Setup
             development: Development
             specifications: Specifications
