fix: to match the file name to the content, change the file name
Signed-off-by: Masahiro Kubota <norikenpi@gmail.com>

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -45,7 +45,7 @@ nav:
       - course/index.md
       - course/vehicle.md
       - course/velocity_planning.md
-      - course/perception.md
+      - course/avoidance.md
   - FAQ: faq.md
   - Community: community.md
 
