feat: add preliminary results to nav
Signed-off-by: Yu Asabe <yu.asabe@tier4.jp>

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -26,6 +26,7 @@ nav:
   - preliminaries:
       - preliminaries/submission.md
       - preliminaries/check-results.md
+      - preliminaries/results.md
   - finals:
       - finals/index.md
       - finals/operation.md
